# FunMG_fp

./: .gitignore  README.md  hello.py  pyproject.toml  requirement.txt
.hypothesis/tmp/: tmp_icqsdky  tmpbr7t8izk  tmphs1r97ti
g16/: input.xyz  job.py  job_adv.py  run_gen_input.sh  run_gen_property_slurm.sh  run_gen_spectrum_slurm.sh  typings.py
g16/test/: input.json
g16/worker/: typings.py  utils.py  worker_main.py
ir_complex_qm_script/: clean_keep_only_input.py  fp.py  input_gen.py  rename.py
orca/: job_adv.py  run_gen_electronic_state_slurm.sh  run_gen_input.sh  run_gen_plqy.sh  run_gen_property_slurm.sh  run_gen_spectrum_slurm.sh  tmp.py  typings.py
pyscf/: job_pyscf.py
qm_fused/: job.py  job_abs.py  job_phosphor.py  run_abs.sh  run_fused_fluroe.sh  run_fused_fluroe_mrtadf.sh  run_fused_phosphor.sh  run_fused_shangjiao.sh  tmp.py
utils/: geometry_2_input.py  orca_2_gau.py  preprocess.py  slurm.py  smi_2_geom.py
